I add html and css for slider section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         </div>
 
         <div id="slider">
-
+            <div class="slider__caption">
+                <h2 class="slider__heading">Los Angeles</h2>
+                <p class="slider__text">Thank you, Chicago - A night we won't forget.</p>
+            </div>
         </div>
 
         <div id="content">
