--- a/index.html
+++ b/index.html
@@ -47,6 +47,79 @@
         </div>
 
         <div id="content">
+            <!-- About -->
+            <div class="content__section">
+                <h2 class="section-heading">
+                    the band
+                </h2>
+                <i class="section-sub-heading">
+                    We love music
+                </i>
+                <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</p>
+
+                <div class="img-container">
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="./assets/img/content/bandmember.jpg" alt="member-img">
+                    </div>
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="./assets/img/content/bandmember.jpg" alt="member-img">
+                    </div>
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="./assets/img/content/bandmember.jpg" alt="member-img">
+                    </div>
+                </div>
+
+            </div>
+            <!-- Tour -->
+            <div class="tour-section">
+                <div class="content__section">
+                    <h2 class="section-heading text-white">
+                        tour dates
+                    </h2>
+                    <i class="section-sub-heading text-white">
+                        Remember to book your tickets!
+                    </i>
+                    <ul class="book-ticket">
+                        <li>
+                            <span class="month">September</span>
+                            <span class="sold-out">Sold out</span>
+                        </li>
+                        <li>
+                            <span class="month">October</span>
+                            <span class="sold-out">Sold out</span>
+                        </li>
+                        <li>
+                            <span class="month">November</span>
+                            <span class="ticket-left">3</span>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+            <!-- Contact -->
+            <div class="content__section">
+                <h2 class="section-heading">
+                    CONTACT
+                </h2>
+                <i class="section-sub-heading">
+                    Fan? Drop a note!
+                </i>
+
+                <div class="img-container">
+
+                </div>
+            </div>
 
         </div>
 
