I finished html and css for tour dates.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,37 @@
                             <span class="month">November</span>
                             <span class="ticket-left">3</span>
                         </li>
+                        <div class="clear"></div>
                     </ul>
-
+                    <div class="tour-list">
+                        <div class="tour-place">
+                            <img src="./assets/img/places/newyork.jpg" alt="newyork">
+                            <div class="tour-info">
+                                <h3 class="tour-city">New York</h3>
+                                <p class="tour-time">Fri 27 Nov 2016</p>
+                                <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="#" class="tour-ticket">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="tour-place">
+                            <img src="./assets/img/places/paris.jpg" alt="paris">
+                            <div class="tour-info">
+                                <h3 class="tour-city">Paris</h3>
+                                <p class="tour-time">Fri 27 Nov 2016</p>
+                                <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="#" class="tour-ticket">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="tour-place">
+                            <img src="./assets/img/places/sanfran.jpg" alt="sanfran">
+                            <div class="tour-info">
+                                <h3 class="tour-city">San Francisco</h3>
+                                <p class="tour-time">Fri 27 Nov 2016</p>
+                                <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="#" class="tour-ticket">Buy Tickets</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- Contact -->
