--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
+    <link rel="shortcut icon" href="./assets/img/the_band_icon.jpg" type="image/x-icon">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Style CSS -->
@@ -17,9 +18,9 @@
         <div id="header">
             <ul id="nav">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Band</a></li>
-                <li><a href="#">Tour</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#band">Band</a></li>
+                <li><a href="#tour">Tour</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li>
                     <a href="#">
                         More
@@ -48,7 +49,7 @@
 
         <div id="content">
             <!-- About -->
-            <div class="content__section">
+            <div id="band" class="content__section">
                 <h2 class="section-heading">
                     the band
                 </h2>
@@ -82,7 +83,7 @@
 
             </div>
             <!-- Tour -->
-            <div class="tour-section">
+            <div id="tour" class="tour-section">
                 <div class="content__section">
                     <h2 class="section-heading text-white">
                         tour dates
@@ -105,55 +106,95 @@
                         </li>
                         <div class="clear"></div>
                     </ul>
-                    <div class="tour-list">
-                        <div class="tour-place">
+                    <div class="tour-list row">
+                        <div class="col-third col">
                             <img src="./assets/img/places/newyork.jpg" alt="newyork">
                             <div class="tour-info">
                                 <h3 class="tour-city">New York</h3>
                                 <p class="tour-time">Fri 27 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="tour-ticket">Buy Tickets</a>
+                                <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="tour-place">
+                        <div class="col-third col">
                             <img src="./assets/img/places/paris.jpg" alt="paris">
                             <div class="tour-info">
                                 <h3 class="tour-city">Paris</h3>
-                                <p class="tour-time">Fri 27 Nov 2016</p>
+                                <p class="tour-time">Sat 28 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="tour-ticket">Buy Tickets</a>
+                                <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="tour-place">
+                        <div class="col-third col">
                             <img src="./assets/img/places/sanfran.jpg" alt="sanfran">
                             <div class="tour-info">
                                 <h3 class="tour-city">San Francisco</h3>
-                                <p class="tour-time">Fri 27 Nov 2016</p>
+                                <p class="tour-time">Sun 29 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="tour-ticket">Buy Tickets</a>
+                                <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Contact -->
-            <div class="content__section">
+            <!-- contact -->
+            <div id="contact" class="content__section">
                 <h2 class="section-heading">
                     CONTACT
                 </h2>
                 <i class="section-sub-heading">
                     Fan? Drop a note!
                 </i>
-
-                <div class="img-container">
-
+                <div class="row contact-content">
+                    <div class="col col-half contact-info">
+                        <p>
+                            <i class="fa fa-map-marker-alt"></i>Chicago,US
+                        </p>
+                        <p>
+                            <i class="fas fa-phone-alt"></i>Phone:+00 151515
+                        </p>
+                        <p>
+                            <i class="fa fa-envelope"></i>Email: mail@mail.com
+                        </p>
+                    </div>
+                    <div class="col col-half contact-form">
+                        <form action="">
+                            <div class="row full-right">
+                                <div class="col col-half">
+                                    <input type="text" name="" placeholder="Name" id="" required class="form-control">
+                                </div>
+                                <div class="col col-half">
+                                    <input type="email" name="" placeholder="Email" id="" required class="form-control">
+                                </div>
+                            </div>
+                            <div class="row mt-8">
+                                <div class="col col-full">
+                                    <input type="text" name="" placeholder="Message" required class="form-control">
+                                </div>
+                            </div>
+                            <input class="btn mt-16" type="submit" value="SEND">
+                        </form>
+                    </div>
                 </div>
             </div>
-
+            <!-- Map -->
+            <div class="map-section">
+                <img src="./assets/img/map/map.jpg" alt="map">
+            </div>
         </div>
 
         <div id="footer">
-
+            <div class="socials">
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-snapchat"></i></a>
+                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <p class="copy-right">
+                Powered by <a href="#">w3.css</a>
+            </p>
         </div>
     </div>
 
