I finished the responsive design for mobile. the nav bar responsive was done.

--- a/index.html
+++ b/index.html
@@ -219,9 +219,14 @@
         var menuList = document.querySelectorAll('#nav li a[href*="#"]');
         for (var i = 0; i < menuList.length; i++) {
             var menuItem = menuList[i];
-
             menuItem.onclick = function () {
-                header.style.height = null;
+                var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+                if (isParentMenu) {
+                    event.preventDefault();
+                }
+                else {
+                    header.style.height = null;
+                }
             }
         }
     </script>
