--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="clear"></div>
                     </ul>
                     <div class="tour-list row">
-                        <div class="col-third col">
+                        <div class="col-third s-col-full col mt-16">
                             <img src="./assets/img/places/newyork.jpg" alt="newyork">
                             <div class="tour-info">
                                 <h3 class="tour-city">New York</h3>
@@ -119,7 +119,7 @@
                                 <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="col-third col">
+                        <div class="col-third s-col-full col mt-16">
                             <img src="./assets/img/places/paris.jpg" alt="paris">
                             <div class="tour-info">
                                 <h3 class="tour-city">Paris</h3>
@@ -128,7 +128,7 @@
                                 <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="col-third col">
+                        <div class="col-third s-col-full col mt-16">
                             <img src="./assets/img/places/sanfran.jpg" alt="sanfran">
                             <div class="tour-info">
                                 <h3 class="tour-city">San Francisco</h3>
@@ -149,7 +149,7 @@
                     Fan? Drop a note!
                 </i>
                 <div class="row contact-content">
-                    <div class="col col-half contact-info">
+                    <div class="col col-half s-col-full contact-info">
                         <p>
                             <i class="fa fa-map-marker-alt"></i>Chicago,US
                         </p>
@@ -160,13 +160,13 @@
                             <i class="fa fa-envelope"></i>Email: mail@mail.com
                         </p>
                     </div>
-                    <div class="col col-half contact-form">
+                    <div class="col col-half s-col-full contact-form">
                         <form action="">
                             <div class="row full-right">
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full">
                                     <input type="text" name="" placeholder="Name" id="" required class="form-control">
                                 </div>
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full">
                                     <input type="email" name="" placeholder="Email" id="" required class="form-control">
                                 </div>
                             </div>
