--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
                     consequat.</p>
 
                 <div class="img-container">
-                    <div class="member-item">
+                    <div class="member-item mt-32">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/content/bandmember.jpg" alt="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="member-item mt-32">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/content/bandmember.jpg" alt="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="member-item mt-32">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/content/bandmember.jpg" alt="member-img">
                     </div>
@@ -116,7 +116,7 @@
                                 <h3 class="tour-city">New York</h3>
                                 <p class="tour-time">Fri 27 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="btn">Buy Tickets</a>
+                                <a href="#" class="btn s-full-width">Buy Tickets</a>
                             </div>
                         </div>
                         <div class="col-third s-col-full col mt-16">
@@ -125,7 +125,7 @@
                                 <h3 class="tour-city">Paris</h3>
                                 <p class="tour-time">Sat 28 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="btn">Buy Tickets</a>
+                                <a href="#" class="btn s-full-width">Buy Tickets</a>
                             </div>
                         </div>
                         <div class="col-third s-col-full col mt-16">
@@ -134,7 +134,7 @@
                                 <h3 class="tour-city">San Francisco</h3>
                                 <p class="tour-time">Sun 29 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="btn">Buy Tickets</a>
+                                <a href="#" class="btn s-full-width">Buy Tickets</a>
                             </div>
                         </div>
                     </div>
@@ -160,13 +160,13 @@
                             <i class="fa fa-envelope"></i>Email: mail@mail.com
                         </p>
                     </div>
-                    <div class="col col-half s-col-full contact-form">
+                    <div class="col col-half s-col-full s-mt-16 contact-form">
                         <form action="">
-                            <div class="row full-right">
+                            <div class="row full-right contact-input">
                                 <div class="col col-half s-col-full">
                                     <input type="text" name="" placeholder="Name" id="" required class="form-control">
                                 </div>
-                                <div class="col col-half s-col-full">
+                                <div class="col col-half s-col-full s-mt-8">
                                     <input type="email" name="" placeholder="Email" id="" required class="form-control">
                                 </div>
                             </div>
@@ -175,7 +175,7 @@
                                     <input type="text" name="" placeholder="Message" required class="form-control">
                                 </div>
                             </div>
-                            <input class="btn mt-16" type="submit" value="SEND">
+                            <input class="btn mt-16 s-full-width" type="submit" value="SEND">
                         </form>
                     </div>
                 </div>
