--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <h3 class="tour-city">New York</h3>
                                 <p class="tour-time">Fri 27 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="btn s-full-width">Buy Tickets</a>
+                                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col-third s-col-full col mt-16">
@@ -125,7 +125,7 @@
                                 <h3 class="tour-city">Paris</h3>
                                 <p class="tour-time">Sat 28 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="btn s-full-width">Buy Tickets</a>
+                                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col-third s-col-full col mt-16">
@@ -134,7 +134,7 @@
                                 <h3 class="tour-city">San Francisco</h3>
                                 <p class="tour-time">Sun 29 Nov 2016</p>
                                 <p class="tour-text">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="btn s-full-width">Buy Tickets</a>
+                                <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,40 @@
             </p>
         </div>
     </div>
-
+    <div class="modal js-modal">
+        <div class="modal-container">
+            <div class="modal-close-btn js-modal-close">
+                <i class="fa fa-times"></i>
+            </div>
+            <header class="modal-header">
+                <p>
+                    <i class="fa fa-shopping-bag"></i>
+                    Tickets
+                </p>
+            </header>
+            <div class="modal-body">
+                <label class="modal-label" for="">
+                    <i class="fa fa-shopping-cart"></i>Tickets, $15 per person
+                </label>
+                <input type="text" class="modal-input col-full pd-16 mt-16" placeholder="How many?">
+                <label class="modal-label mt-16" for="">
+                    <i class="fa fa-user"></i>Send to
+                </label>
+                <input type="email" name="" class="modal-email col-full pd-16 mt-16" placeholder="Enter email">
+                <button class="modal-pay-btn mt-16 col-full pd-16">
+                    <span>pay <i class="fa fa-check"></i></span>
+                </button>
+            </div>
+            <footer class="modal-footer m-16">
+                <button class="footer-close-btn js-modal-close pd-16">
+                    <span>
+                        Close <i class="fa fa-times"></i>
+                    </span>
+                </button>
+                <p class="modal-help">Need <a href="#">help?</a></p>
+            </footer>
+        </div>
+    </div>
     <script>
         var header = document.getElementById('header');
         var mobileMenu = document.getElementById('menu-mobile');
@@ -228,6 +261,27 @@
                     header.style.height = null;
                 }
             }
+        }
+    </script>
+
+    <script>
+        const buyBtns = document.querySelectorAll('.js-buy-ticket')
+        const modal = document.querySelector('.js-modal');
+        const modalCloses = document.querySelectorAll('.js-modal-close')
+
+        function showBuyTicket() {
+            modal.classList.add('open')
+        }
+        function closeBuyTicket() {
+            modal.classList.remove('open')
+        }
+
+
+        for (const buyBtn of buyBtns) {
+            buyBtn.addEventListener('click', showBuyTicket);
+        }
+        for (const modalClose of modalCloses) {
+            modalClose.addEventListener('click', closeBuyTicket);
         }
     </script>
 </body>
