--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
     </div>
     <div class="modal js-modal">
-        <div class="modal-container">
+        <div class="modal-container js-modal-container">
             <div class="modal-close-btn js-modal-close">
                 <i class="fa fa-times"></i>
             </div>
@@ -268,10 +268,14 @@
         const buyBtns = document.querySelectorAll('.js-buy-ticket')
         const modal = document.querySelector('.js-modal');
         const modalCloses = document.querySelectorAll('.js-modal-close')
+        const modalContainer = document.querySelector('.js-modal-container');
 
+        // function to show buy ticket by adding class .open into class .modal
         function showBuyTicket() {
             modal.classList.add('open')
         }
+        // function to close buy ticket by remove class .open from class .modal
+
         function closeBuyTicket() {
             modal.classList.remove('open')
         }
@@ -280,9 +284,15 @@
         for (const buyBtn of buyBtns) {
             buyBtn.addEventListener('click', showBuyTicket);
         }
+
         for (const modalClose of modalCloses) {
             modalClose.addEventListener('click', closeBuyTicket);
         }
+        // close buy ticket when click on somewhere outside of the modal
+        modalContainer.addEventListener('click', function (event) {
+            event.stopPropagation()
+        })
+        modal.addEventListener('click', closeBuyTicket);
     </script>
 </body>
 
